
noinst_LIBRARIES = \
	libext2fs.a

libext2fs_a_SOURCES = \
	alloc.c			\
	alloc_sb.c		\
	alloc_stats.c	\
	alloc_tables.c	\
	badblocks.c		\
	bb_compat.c		\
	bb_inode.c		\
	bitmaps.c		\
	bitops.c		\
	block.c			\
	bmap.c			\
	crc16.c			\
	csum.c			\
	check_desc.c	\
	closefs.c		\
	dblist.c		\
	dblist_dir.c	\
	dir_iterate.c	\
	dirblock.c		\
	dirhash.c		\
	dupfs.c			\
	expanddir.c		\
	ext2_err.c		\
	ext_attr.c		\
	extent.c		\
	fileio.c		\
	finddev.c		\
	freefs.c		\
	gen_bitmap.c	\
	get_pathname.c	\
	getsectsize.c	\
	getsize.c		\
	i_block.c		\
	icount.c		\
	imager.c		\
	ind_block.c		\
	initialize.c	\
	inline.c		\
	inode.c			\
	inode_io.c		\
	io_manager.c	\
	ismounted.c		\
	link.c			\
	llseek.c		\
	lookup.c		\
	mkdir.c			\
	mkjournal.c		\
	namei.c			\
	native.c		\
	newdir.c		\
	openfs.c		\
	read_bb.c		\
	read_bb_file.c	\
	res_gdt.c		\
	rw_bitmaps.c	\
	swapfs.c		\
	tdb.c			\
	test_io.c		\
	undo_io.c		\
	unix_io.c		\
	unlink.c		\
	valid_blk.c		\
	version.c

libext2fs_a_CFLAGS =				\
	-I$(top_srcdir)/e2fsprogs-1.41.9	\
	-I$(top_srcdir)/e2fsprogs-1.41.9/et
